--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -20,7 +20,7 @@
                                         class="muni-logo"></wm-picture>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow75_2">
+                                <wm-gridrow name="gridrow75_2" padding="0.5em unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn128"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn129">
                                         <wm-label padding="unset 0.5em" name="label80" class="col-md-12 control-label" caption="Project Owner"></wm-label>
@@ -30,7 +30,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn130"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow6" padding=".5em unset">
+                                <wm-gridrow name="gridrow6" padding="0.5em unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn107_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn8">
                                         <wm-composite name="composite1" margin="unset unset unset 0.5em">
@@ -42,7 +42,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn108_1"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow8" padding=".5em unset">
+                                <wm-gridrow name="gridrow8" padding="0.5em unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn109_2"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn10">
                                         <wm-composite name="composite2" margin="unset unset unset 0.5em">
@@ -54,7 +54,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn110_1"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow9">
+                                <wm-gridrow name="gridrow9" padding="0.5em unset unset unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn111_2"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn11">
                                         <wm-composite name="composite3" margin="0.5em unset 0.5em 0.5em">
