--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -124,7 +124,7 @@
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
-                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridUsersubscriptionsList.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt"></wm-picture>
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridUsersubscriptionsList.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" class="profile-photo"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
                 </wm-gridrow>
@@ -257,7 +257,7 @@
                 <wm-gridrow name="gridrow26">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn49"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" horizontalalign="center" name="gridcolumn50">
-                        <wm-picture picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridEmployees.selecteditem.ID+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" name="picture3"></wm-picture>
+                        <wm-picture picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridEmployees.selecteditem.ID+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" name="picture3" class="profile-photo"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn51"></wm-gridcolumn>
                 </wm-gridrow>
@@ -344,7 +344,7 @@
                 <wm-gridrow name="gridrow27_1">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn49_2"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" horizontalalign="center" name="gridcolumn50_1">
-                        <wm-picture picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridAdmin.selecteditem.ID+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" name="picture3_1"></wm-picture>
+                        <wm-picture picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridAdmin.selecteditem.ID+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" name="picture3_1" class="profile-photo"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn51_1"></wm-gridcolumn>
                 </wm-gridrow>
