--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -90,8 +90,7 @@
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
-                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridVendorUsers.selecteditem.users.id+&quot;/content/photo&quot;
-" shape="circle" width="100pt" height="100pt"></wm-picture>
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridVendorUsers.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" class="profile-photo"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
                 </wm-gridrow>
@@ -169,7 +168,7 @@
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
-                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridAdmins.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt"></wm-picture>
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridAdmins.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt" class="profile-photo"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
                 </wm-gridrow>
