--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -19,7 +19,8 @@
                                         <wm-layoutgrid name="layoutgrid8">
                                             <wm-gridrow name="gridrow28">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn34_2" horizontalalign="center">
-                                                    <wm-picture name="picture1" picturesource="bind:'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo'" margin="2em unset unset unset" class="profile-photo"></wm-picture>
+                                                    <wm-picture name="picture1" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'" margin="2em unset unset unset"
+                                                    class="profile-photo"></wm-picture>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow29">
