-Fee Form Status controls - Cart Count for users New files added - [GetFeeIdsOfUserInCartResponse.java,NoOfItemsInUserCartResponse.java] Files modified - [Cx2QueryExecutorServiceImpl.java,MyCart.js,cx2-queries.hbm.xml,QueryExecutionController.java,MyCart.html,Forms.variables.json,topnav.html,cx2_query.json,Forms.html,Cx2QueryExecutorService.java,Forms.js,app.variables.json]

--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -3,7 +3,7 @@
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_cart">
-                <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" margin="unset 2em unset unset"></wm-anchor>
+                <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.svNoOfItemsInUserCart.firstRecord._count"></wm-anchor>
             </wm-nav-item>
             <wm-nav-item name="list_profile">
                 <wm-gridcolumn columnwidth="3" name="gridcolumn1">
