--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -353,7 +353,7 @@
                                                         iconclass="wi wi-pencil" title="Edit" action="updaterowAction($event);editRow()" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee" disabled="false"></wm-grid-row-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="bind:row.getProperty('paidStatus') !== 'Paid' &amp;&amp; Variables.svUserPermissions.dataSet.canEdit" class="btn-transparent"
                                                         iconclass="wi wi-trash" title="Delete" action="deleteRow()" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee" disabled="false"></wm-grid-row-action>
-                                                        <wm-grid-row-action key="customRow" display-name="" show="bind:row.getProperty('paidStatus') === 'Unpaid'" class="btn-transparent" iconclass="wi wi-add-shopping-cart" title="Add to Cart"
+                                                        <wm-grid-row-action key="customRow" display-name="" show="bind:(row.getProperty('hideCart') == 'true')" class="btn-transparent" iconclass="wi wi-add-shopping-cart" title="Add to Cart"
                                                         action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                     <wm-liveform novalidate="false" errormessage="" title="Fee Details" formlayout="dialog" iconclass="wi wi-attach-money" dataset="bind:Variables.Cx2FeesData.dataSet" captionalign="left" captionposition="top"
